<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <data>

        <variable
            name="viewModel"
            type="com.benwunet.sign.ui.viewmodel.InfoViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16.5dp"
            android:layout_marginTop="30dp"
            android:text="@string/sign_info_back"
            binding:onClickCommand="@{viewModel.closeOnClickCommand}"
            android:textColor="@color/gray65"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="45dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25.5dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/normal_bg_gray"
            android:gravity="center"
            binding:onClickCommand="@{viewModel.skipOnClickCommand}"
            android:text="@string/sign_skip"
            android:textColor="@color/gray_f7"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_skip"
            android:layout_marginTop="39dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_photo"
                android:textColor="@color/black_222"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8.5dp"
                android:text="@string/sign_photo_hint" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_add"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_below="@+id/tv_hint"
                android:layout_marginTop="28dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="2dp"
                binding:onClickCommand="@{viewModel.photoOnClickCommand}">

                <ImageView
                    binding:url="@{viewModel.imgUrl}"
                    android:layout_width="match_parent"
                    android:scaleType="center"
                    android:layout_height="match_parent"
                    />
                <ImageView
                    android:id="@+id/iv_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/iv_sign_add" />
            <ImageView
                android:layout_width="20.5dp"
                android:layout_gravity="bottom|right"
                android:layout_height="18dp"
                android:layout_margin="5dp"
                android:src="@mipmap/icon_sign_photo"
                />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52.5dp"
                android:text="@string/name"
                android:textColor="@color/black_222"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sign_name_hint" />

            <EditText
                android:layout_width="247dp"
                android:layout_height="45dp"
                android:layout_marginTop="28dp"
                android:textSize="14sp"
                android:maxLength="11"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={viewModel.name}"
                android:hint="@string/sign_info_name"
                android:textColorHint="@color/gray_9e"
                android:background="@drawable/normal_bg_white_shadow"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="31dp"
            android:background="@drawable/normal_bg_yellow"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="?selectableItemBackground"
                android:text="@string/sign_info_next"
                android:textColor="@color/black"
                android:textSize="18sp"
                binding:onClickCommand="@{viewModel.nextOnClickCommand}" />

        </LinearLayout>
    </RelativeLayout>
</layout>