<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <data>

        <variable
            name="viewModel"
            type="com.benwunet.sign.ui.viewmodel.InfoViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16.5dp"
            android:layout_marginTop="30dp"
            android:text="@string/sign_info_back"
            binding:onClickCommand="@{viewModel.closeOnClickCommand}"
            android:textColor="@color/gray65"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="45dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25.5dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/normal_bg_gray"
            android:gravity="center"
            binding:onClickCommand="@{viewModel.skipOnClickCommand}"
            android:text="@string/sign_skip"
            android:textColor="@color/gray_f7"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_skip"
            android:layout_marginTop="39dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_sex"
                android:textColor="@color/black_222"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8.5dp"
                android:text="@string/sign_sex_hint" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            
            <RelativeLayout
                android:layout_marginTop="28dp"
                android:layout_marginRight="44dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                
                <ImageView
                    android:id="@+id/iv_man"
                    android:layout_width="80.5dp"
                    android:layout_height="80.5dp"
                    android:src="@mipmap/icon_sex_man"
                    />
                <LinearLayout
                    android:layout_width="20dp"
                    android:gravity="center"
                    android:layout_alignRight="@+id/iv_man"
                    android:layout_alignBottom="@+id/iv_man"
                    android:background="@drawable/shape_dot_yellow"
                    android:layout_height="20dp">
                    <ImageView
                        android:layout_width="11dp"
                        android:layout_height="8dp"
                        android:src="@mipmap/icon_sign_select"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_man"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:text="男"
                    android:textColor="@color/black_222"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="28dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_woman"
                    android:layout_width="80.5dp"
                    android:layout_height="80.5dp"
                    android:src="@mipmap/icon_sex_woman"
                    />
                <LinearLayout
                    android:layout_width="20dp"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_alignRight="@+id/iv_woman"
                    android:layout_alignBottom="@+id/iv_woman"
                    android:background="@drawable/shape_dot_yellow"
                    android:layout_height="20dp">
                    <ImageView
                        android:layout_width="11dp"
                        android:layout_height="8dp"
                        android:src="@mipmap/icon_sign_select"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="女"
                    android:layout_marginTop="11.5dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/iv_woman"
                    android:textSize="16sp"
                    android:textColor="@color/gray_97"
                    />
            </RelativeLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="52.5dp"
                android:text="@string/sign_info_birthday"
                android:textColor="@color/black_222"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sign_info_birthday_hint" />


            <TextView
                android:layout_marginTop="28dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1990年6月1日"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@color/transparent"
                android:textColor="@color/gray_66"
                binding:onClickCommand="@{viewModel.timeOnClickCommand}"
                />

            <View
                android:layout_marginTop="4dp"
                android:layout_width="159dp"
                android:layout_height="2dp"
                android:background="@color/gray_b6"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="31dp"
            android:background="@drawable/normal_bg_yellow"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="?selectableItemBackground"
                android:text="@string/sign_info_next"
                android:textColor="@color/black"
                android:textSize="18sp"
                binding:onClickCommand="@{viewModel.nextOnClickCommand}" />

        </LinearLayout>
    </RelativeLayout>
</layout>