<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ResourceName">

    <data>

        <variable
            name="viewModel"
            type="com.benwunet.sign.ui.viewmodel.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@mipmap/iv_sign_bg" />
        <com.benwunet.base.wdiget.NormalTitleBar
            android:id="@+id/ntb"
            app:ntb_tv_left="showAndFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="48dp"
            android:paddingRight="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="找回密码"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="34dp"
                android:background="@drawable/normal_bg_black"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16.5dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@mipmap/iv_user_intput" />


                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/sign_number_hint"
                    android:maxLines="12"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:text="@={viewModel.phone}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/textColorHint"
                    android:textSize="16sp"
                    />

            </LinearLayout>

            <com.benwunet.base.wdiget.SmsCodeView
                android:id="@+id/smsCodeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/normal_bg_black"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16.5dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@mipmap/iv_pwd_intput" />


                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/sign_new_pwd_hint"
                    android:inputType="textPassword"
                    android:maxLines="12"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:text="@={viewModel.password}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/textColorHint"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/normal_bg_black"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16.5dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@mipmap/iv_pwd_confirm_intput" />


                <EditText
                    android:id="@+id/et_confirm_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/sign_confirm_pwd_hint"
                    android:inputType="textPassword"
                    android:maxLines="12"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:text="@={viewModel.confirm}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/textColorHint"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/normal_bg_yellow"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="?selectableItemBackground"
                    android:text="注册"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    binding:onClickCommand="@{viewModel.register}" />
            </LinearLayout>





        </LinearLayout>
    </RelativeLayout>
</layout>